--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
       </div>
       <div class="microgreen-card" data-modal="kalerab-modal">
         <img src="kalerab.jpg" alt="Kaleráb">
-        <h3>Kaleráb</h3>
+        <h3>Kaleráb<br>Red Kohlrabi</h3>
         <p>Jemne sladkastý a osviežujúci, bohatý na živiny.</p>
       </div>
       <div class="microgreen-card" data-modal="horcica-modal">
@@ -427,7 +427,7 @@
   <div id="Hrášok-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Hrášku (Pea, Foxy)</h3>
+      <h3>Benefity Hrášku (Pea Foxy)</h3>
       <pre>Hráškové microgreens sú chutné a výživné, bohaté na vitamíny, minerály a ďalšie živiny vhodné ako súčasť vyváženej stravy. 🌱
 
 🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
@@ -614,29 +614,62 @@ Vychutnajte si prírodnú energiu v každej hrsti! 🌱💚</pre>
   <div id="kalerab-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Kalerábu</h3>
-      <pre>Kalerábové microgreens majú jemne sladkastú chuť, sú plné vitamínov a minerálov a podporujú imunitu, trávenie a zdravé srdce.
+      <h3>Benefity Kalerábu (Red Kohlrabi)</h3>
+      <pre>Kalerábové microgreens majú jemnú sladkastú chuť a sú vhodné ako súčasť vyváženej stravy.
 
-🔬 Výživové hodnoty na 100 g kalerábových microgreens:
-
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
 ✅ Kalórie: 30 kcal
 ✅ Bielkoviny: 3,2 g
 ✅ Sacharidy: 5,5 g
 ✅ Vláknina: 3,5 g
 ✅ Tuky: 0,3 g
 
-🟢 Vitamíny a minerály v kalerábových microgreens
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
 
-🌞 Vitamín A, C, K, B-komplex – podporujú zdravie očí, metabolizmus a regeneráciu buniek.
-💪 Vápnik, draslík, železo – posilňujú kosti, krvný obeh a nervovú sústavu.
+🟢 Vitamíny v kalerábových microgreens:
+• 🌞 Vitamín A – prispieva k udržaniu normálneho videnia.
+• 🛡️ Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• ⚡ Vitamín B6 – prispieva k normálnej funkcii imunitného systému.
+• 🔋 Vitamín B2 (riboflavín) – prispieva k normálnej tvorbe červených krviniek.
+
+🔵 Minerály v kalerábových microgreens:
+• 💪 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• 🩸 Železo – prispieva k normálnej tvorbe červených krviniek.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+• 🧠 Mangán – prispieva k normálnemu metabolizmu živín.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Vláknina – prispieva k normálnej činnosti tráviaceho systému.
+• 🧪 Antioxidanty – chránia bunky pred oxidačným stresom.
 
 💡 Prečo zaradiť kalerábové microgreens do stravy?
+✅ Vitamín C a železo – prispievajú k normálnej funkcii imunitného systému.
+🌾 Vláknina – podporuje zdravú črevnú mikroflóru.
+❤️ Draslík – prispieva k normálnej činnosti srdca.
+⚡ Horčík a vitamín B6 – prispievajú k normálnej činnosti nervového systému.
 
-✅ Podporujú trávenie – vláknina pomáha črevnej mikroflóre.
-✅ Zlepšujú krvný obeh – železo a draslík podporujú zdravé cievy.
-✅ Majú protizápalové účinky – vďaka antioxidantom chránia bunky.
+👉 Tip:
+Kalerábové microgreens sú skvelé nie len do šalátov a sendvičov! Vyskúšajte ich:
+• 🥤 V smoothies – pridajte hrstku pre výživový boost.
+• 🍲 V polievkach – posypte ich pred podávaním.
+• 🍳 Ako dekoráciu – ozdobte nimi avokádové toasty alebo vajíčkovú pochúťku.
+• 🥑 Do dipov – zmiešajte s jogurtom, cesnakom a bylinkami.
 
-👉 Tip: Skvelé do šalátov a sendvičov! 🥗</pre>
+⚠️ Alergény:
+Kaleráb patrí medzi brukvovité rastliny, ktoré môžu u citlivých osôb vyvolať alergickú reakciu.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Alergény a výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Oživte svoje jedlo výživovou bombou z prírody! 🌱💚</pre>
     </div>
   </div>
 
