--- a/index.html
+++ b/index.html
@@ -473,7 +473,16 @@ Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
 ⚡ Horčík a vitamíny B – prispieva k normálnej činnosti nervového systému.
 🦴 Vitamín K, vápnik a fosfor – prispieva k udržaniu normálneho stavu kostí.
 
-👉 Tip: Hráškové microgreens sú vhodné do šalátov, smoothies, polievok alebo ako dekorácia. 🥗🍲
+👉 Tip pre hrášok:
+Hráškové microgreens sú univerzálne a oživia každé jedlo! Vyskúšajte ich:
+• 🥗 V šalátoch – pridajte ich k mixu šalátov s cherry paradajkami a avokádom.
+• 🥤 V zelených smoothies – zmiešajte s špenátom, banánom a kokosovým mliekom.
+• 🍲 Do azijskej wok polievky – posypte ich na vrch pre čerstvý crunch.
+• 🥑 Na avokádový toast – kombinujte s vajcom pošírovaným a sezamovými semienkami.
+• 🍣 V sushi rolkách – pridajte pre jemnú sladkosť a textúru.
+• 🧀 Do tvarohových dipov – zmiešajte s tvarohom, cesnakom a kaporom.
+
+Hráškové microgreens dodajú jedlu farbu, výživu a šmrnc! 🌱✨
 
 ⚠️ Alergény:
 Hrášok môže u citlivých osôb vyvolať alergickú reakciu.
