--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       </div>
       <div class="microgreen-card" data-modal="brokolica-modal">
         <img src="brokolica.jpg" alt="Brokolica">
-        <h3>Brokolica</h3>
+        <h3>Brokolica<br>Broccoli Raab</h3>
         <p>Jemná a zdravá pochúťka.</p>
       </div>
       <div class="microgreen-card" data-modal="kalerab-modal">
@@ -548,7 +548,17 @@ Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
 ⚡ Horčík a vitamíny B – prispieva k normálnej činnosti nervového systému.
 🦴 Vitamín K, vápnik a fosfor – prispieva k udržaniu normálneho stavu kostí.
 
-👉 Tip: Reďkovkové microgreens sú vhodné do šalátov, sendvičov, polievok alebo ako dekorácia. 🥗🍲
+👉 Tip pre reďkovku (Radish Pink):
+Reďkovkové microgreens s jemnou pikantnou chuťou oživia každé jedlo! Vyskúšajte ich:
+• 🥪 V sendvičoch a wrapoch – pridajte ich k šunke, avokádu a krémovému syru.
+• 🍜 V miso polievke – posypte ich na vrch spolu s jarnou cibuľkou a sezamom.
+• 🌮 Do taco aleba quesadilly – doplňte ich k fazuľám, mäsu a zakysanej smotane.
+• 🥚 Na vajíčkovú pochúťku – posypte na omeletu aleba pošírované vajce.
+• 🍣 V sushi alebo poke bowl – pridajte pre štipľavý kontrast.
+• 🍕 Na domácu pizzu – použite ako čerstvú posypku po pečení.
+• 🧈 Do maslových dipov – zmiešajte s maslom a cesnakom pre dokonalú prílohu k pečenému chlebu.
+
+Reďkovkové microgreens dodajú jedlu štipľavý záblesk a sviežosť! 🌶️✨
 
 ⚠️ Alergény:
 Reďkovka patrí medzi brukvovité rastliny, ktoré môžu u citlivých osôb vyvolať alergickú reakciu.
@@ -567,7 +577,7 @@ Vychutnajte si prírodnú energiu v každej hrsti! 🌱💚</pre>
   <div id="brokolica-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Brokolice</h3>
+      <h3>Benefity Brokolice (Broccoli Raab)</h3>
       <pre>Brokolicové microgreens patria medzi najzdravšie zelené potraviny na svete. Obsahujú extrémne vysoké množstvo sulforafanu, ktorý má silné protizápalové a detoxikačné účinky. Navyše sú nabité vitamínmi, minerálmi a antioxidantmi.
 
 🔬 Výživové hodnoty na 100 g brokolicových microgreens:
@@ -616,7 +626,18 @@ Vychutnajte si prírodnú energiu v každej hrsti! 🌱💚</pre>
 ✅ Pomáhajú pri chudnutí – nízkokalorické, ale veľmi výživné.
 ✅ Znižujú zápaly – antioxidanty chránia bunky pred poškodením.
 
-👉 Tip: Brokolicové microgreens sa skvele hodia do smoothies, šalátov, sendvičov a polievok. 🍽️</pre>
+👉 Tip pre brokolicu (Broccoli Raab):
+Brokolicové microgreens s jemnou orechovou chuťou sú dokonalým výživovým doplnkom! Vyskúšajte ich:
+• 🥤 V zelených detox smoothies – zmiešajte s ananásom, špenátom a kokosovou vodou.
+• 🍕 Na domáce flatbready – posypte ich po pečení spolu s kozím syrom a medom.
+• 🍣 V poke bowl – pridajte k ryži, lososu a avokádu pre sviežu textúru.
+• 🥚 Do frittaty – vmiešajte do vajíčkovej zmesi s cherry paradajkami.
+• 🥑 Ako súčasť guacamole – pridajte trochu pre výživový upgrade.
+• 🍜 Do asijských stir-fry – hodia sa k tofu, cesnaku a sezamovému oleju.
+• 🧀 Na krekry s hummusom – posypte ich navrch pre čerstvý kontrast.
+• 🥗 V teplých šalátoch – zmiešajte s grilovanou cuketou a quinou.
+
+Brokolicové microgreens dodajú jedlu výživový "boost" a jemnú hĺbku chuti! 🌱💥</pre>
     </div>
   </div>
 
