--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       </div>
       <div class="microgreen-card" data-modal="horcica-modal">
         <img src="horcica.jpg" alt="Horčica">
-        <h3>Horčica</h3>
+        <h3>Horčica<br>Red Mustard</h3>
         <p>Osviežujúca a jemne pikantná, plná chuti.</p>
       </div>
 
@@ -706,29 +706,65 @@ Oživte svoje jedlo výživovou bombou z prírody! 🌱💚</pre>
   <div id="horcica-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Horčice</h3>
-      <pre>Horčičné microgreens majú pikantnú, ostrú chuť, sú bohaté na antioxidanty a podporujú trávenie a imunitu.
+      <h3>Benefity Horčice (Red Mustard)</h3>
+      <pre>Horčičné microgreens majú pikantnú chuť a sú bohaté na živiny, vhodné ako súčasť vyváženej stravy. 🌱
 
-🔬 Výživové hodnoty na 100 g horčičných microgreens:
-
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
 ✅ Kalórie: 37 kcal
 ✅ Bielkoviny: 3,7 g
 ✅ Sacharidy: 6 g
 ✅ Vláknina: 3,5 g
 ✅ Tuky: 0,5 g
 
-🟢 Vitamíny a minerály v horčičných microgreens
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
 
-🌞 Vitamín A, C, K – podporujú zdravie kože, očí a kostí.
-💖 Draslík, vápnik, železo – podporujú krvný obeh a pevnosť kostí.
+🟢 Vitamíny v horčičných microgreens:
+• 🌞 Vitamín A – prispieva k udržaniu normálneho videnia.
+• 🛡️ Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• ⚡ Vitamín B6 – prispieva k normálnej funkcii imunitného systému.
+• 🔋 Vitamín E – prispieva k ochrane buniek pred poškodením.
+
+🔵 Minerály v horčičných microgreens:
+• 💪 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• 🩸 Železo – prispieva k normálnej tvorbe červených krviniek.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+• 🧠 Mangán – prispieva k normálnemu metabolizmu živín.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Chlorofyl – prispieva k normálnej funkcii buniek.
+• 🧪 Glukosinoláty – prispievajú k detoxikačným procesom organizmu.
+• 🔥 Antioxidanty – chránia bunky pred oxidačným stresom.
 
 💡 Prečo zaradiť horčičné microgreens do stravy?
+✅ Vláknina – prispieva k normálnej činnosti tráviaceho systému.
+❤️ Draslík – prispieva k normálnej činnosti srdca.
+🛡️ Vitamín C a E – prispievajú k normálnej funkcii imunitného systému.
+⚡ Horčík a vitamín B6 – prispievajú k normálnej činnosti nervového systému.
 
-✅ Podporujú trávenie – enzýmy podporujú produkciu žalúdočných štiav.
-✅ Zlepšujú krvný tlak – draslík udržiava rovnováhu tekutín v tele.
-✅ Znižujú zápaly – antioxidanty chránia telo pred oxidačným stresom.
+👉 Tip:
+Horčičné microgreens s výraznou chuťou oživia každé jedlo! Vyskúšajte ich:
+• 🥗 V pikantných šalátoch – kombinujte s rukolou, granátovým jablkom a ovčím syrom.
+• 🍜 V ázijských polievkach – posypte na ramen aleba pho.
+• 🥪 V sendvičoch s pečeným mäsom – pridajte pre štipľavý záblesk.
+• 🍣 V sushi rolloch – doplňte ich k tuňákovi a avokádu.
+• 🧀 Do tvarohových aleba jogurtových dipov – zmiešajte s cesnakom a kaporom.
+• 🥑 Na guacamole – pridajte pre kontrastnú textúru.
 
-👉 Tip: Výborné do ázijských jedál a pikantných šalátov! 🥗🔥</pre>
+⚠️ Alergény:
+Horčica patrí medzi silné alergény a môže vyvolať alergické reakcie u citlivých osôb.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Alergény a výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Pridajte si štipľavú výživovú bombu do každej porcie! 🌶️✨</pre>
     </div>
   </div>
 
