--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
       <div class="microgreen-card" data-modal="rukola-modal">
         <img src="rukola.jpg" alt="Rukola">
-        <h3>Rukola</h3>
+        <h3>Rukola<br>Arugula</h3>
         <p>Jemne korenistá a osviežujúca, plná energie.</p>
       </div>
       <div class="microgreen-card" data-modal="azia-modal">
@@ -771,29 +771,63 @@ Pridajte si štipľavú výživovú bombu do každej porcie! 🌶️✨</pre>
   <div id="rukola-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Rukoly</h3>
-      <pre>Rukolové microgreens majú jemne korenistú, orieškovú chuť, podporujú zdravie kostí, srdca a trávenie.
+      <h3>Benefity Rukoly (Arugula)</h3>
+      <pre>Rukolové microgreens majú jemnú orechovú chuť a sú bohaté na živiny, vhodné ako súčasť vyváženej stravy. 🌱
 
-🔬 Výživové hodnoty na 100 g rukolových microgreens:
-
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
 ✅ Kalórie: 32 kcal
 ✅ Bielkoviny: 3,5 g
 ✅ Sacharidy: 5,8 g
 ✅ Vláknina: 3 g
 ✅ Tuky: 0,4 g
 
-🟢 Vitamíny a minerály v rukolových microgreens
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
 
-🦸‍♂️ Vitamín C, K, A – podporujú imunitu a zdravie kože.
-💖 Vápnik, draslík, horčík – pomáhajú srdcu a svalom.
+🟢 Vitamíny v rukolových microgreens:
+• 🌞 Vitamín A – prispieva k udržaniu normálneho videnia.
+• 🛡️ Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• 💡 Vitamín B9 (kyselina listová) – prispieva k normálnej tvorbe krvi.
+
+🔵 Minerály v rukolových microgreens:
+• 💪 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+• 🧠 Železo – prispieva k normálnej tvorbe červených krviniek.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Chlorofyl – prispieva k normálnej funkcii buniek.
+• 🧪 Antioxidanty – chránia bunky pred oxidačným stresom.
+• 🌱 Glukozinoláty – prispievajú k detoxikačným procesom organizmu.
 
 💡 Prečo zaradiť rukolové microgreens do stravy?
+✅ Vláknina – prispieva k normálnej činnosti tráviaceho systému.
+❤️ Draslík – prispieva k normálnej činnosti srdca.
+🛡️ Vitamín C – prispieva k normálnej funkcii imunitného systému.
+⚡ Horčík a vitamín B9 – prispievajú k normálnej činnosti nervového systému.
 
-✅ Podporujú zdravé trávenie – vláknina podporuje zdravie čriev.
-✅ Znižujú krvný tlak – draslík reguluje cievy.
-✅ Majú protizápalové účinky – antioxidanty chránia bunky.
+👉 Tip:
+Rukolové microgreens sú dokonalým doplnkom talianskej kuchyne! Vyskúšajte ich:
+• 🍕 Na pizzu – posypte ich po pečení spolu s parmezánom.
+• 🍝 V pastách – pridajte do carbonary aleba aglio e olio.
+• 🥗 V šaláte Caprese – kombinujte s mozzarellou, paradajkami a bazalkou.
+• 🥑 Na bruschettu – doplňte ich k ricotte a medu.
+• 🥤 V zelených šťavách – zmiešajte s jablkom a limetkou.
+• 🧀 Do pestových omáčok – pridajte pre sviežu chuť.
 
-👉 Tip: Skvelé do talianskych jedál a šalátov! 🍕</pre>
+⚠️ Alergény:
+Rukola patrí medzi brukvovité rastliny, ktoré môžu u citlivých osôb vyvolať alergickú reakciu.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Alergény a výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Dodajte svojim jedlám štipku Stredomoria! 🍅✨</pre>
     </div>
   </div>
 
