--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
       </div>
       <div class="microgreen-card" data-modal="azia-modal">
         <img src="azia.jpg" alt="Ázijský mix">
-        <h3>Ázijský mix</h3>
+        <h3>Ázijský mix<br>Asian Micro Mix</h3>
         <p>Objavte lahodnú umami chuť.</p>
       </div>
       <div class="microgreen-card" data-modal="salat-modal">
@@ -834,31 +834,60 @@ Dodajte svojim jedlám štipku Stredomoria! 🍅✨</pre>
   <div id="azia-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Ázijského mixu </h3>
-      <pre>Tento mix kombinuje jemné a pikantné chute vďaka zmesi pak choi (čínska kapusta), biela horčica, mizuna červená a mladé listy kvaky (turín). Obsahuje množstvo vitamínov a antioxidantov, ktoré podporujú zdravie srdca, trávenia a imunity.
+      <h3>Benefity Ázijského mixu (Asian Micro Mix)</h3>
+      <pre>Otvorte si bránu umami chutí ázijských jedál s mixom microgreens - pak choi (čínska kapusta), biela horčica, mizuna červená a mladé listy kvaky (turín), ktoré sú ľahké pestovať a plné exotických vnemov! Táto zmes kombinuje jemné, pikantné a sladké noty v dokonalej harmonii. 🌏✨
 
-🔬 Výživové hodnoty na 100 g ázijského mixu microgreens:
-
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
 ✅ Kalórie: 38 kcal
 ✅ Bielkoviny: 3,9 g
 ✅ Sacharidy: 6,2 g
 ✅ Vláknina: 4 g
 ✅ Tuky: 0,5 g
 
-🟢 Vitamíny a minerály v ázijskom mixe microgreens
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
 
-🌞 Vitamín A, C, K, B-komplex – podporujú zdravé kosti, metabolizmus a imunitu.
-💖 Draslík, vápnik, horčík, železo – posilňujú kardiovaskulárny systém a kosti.
+🟢 Vitamíny v Ázijskom mixe:
+• 🌞 Vitamín A – prispieva k normálnemu videniu.
+• 🛡️ Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• ⚡ Vitamíny B-komplex – podporujú energetický metabolizmus a funkciu nervov.
 
-💡 Prečo zaradiť ázijský mix microgreens do stravy?
+🔵 Minerály v Ázijskom mixe:
+• 💪 Vápnik – prispieva k udržaniu zdravých kostí.
+• ❤️ Draslík – prispieva k normálnemu krvnému tlaku.
+• ⚡ Horčík – podporuje činnosť svalov.
+• 🩸 Železo – prispieva k tvorbe červených krviniek.
 
-✅ Podporujú trávenie – enzýmy a vláknina regulujú črevá.
-✅ Zlepšujú krvný tlak – draslík pomáha udržiavať zdravé cievy.
-✅ Majú protizápalové účinky – antioxidanty chránia bunky.
-✅ Posilňujú imunitný systém – kombinácia rôznych druhov listovej zeleniny zaisťuje široké spektrum živín.
-✅ Pomáhajú pri detoxikácii – vysoký obsah chlorofylu podporuje čistenie tela od toxínov.
+🟠 Ďalšie prospešné látky:
+• 🌿 Chlorofyl – prispieva k detoxikácii organizmu.
+• 🧪 Antioxidanty – chránia bunky pred poškodením.
+• 🔥 Glukozinoláty (v horčici) – podporujú prirodzené detoxikačné procesy.
 
-👉 Tip: Skvelé do wok jedál, polievok, sushi a ázijských šalátov! 🍜🥢</pre>
+💡 Prečo zaradiť Ázijský mix microgreens do stravy?
+✅ Vláknina – prispieva k zdravému tráveniu.
+❤️ Draslík a horčík – podporujú funkciu srdca.
+🛡️ Vitamín C a antioxidanty – posilňujú imunitný systém.
+🌱 Kombinácia druhov – zaisťuje široké spektrum živín pre celkové zdravie.
+
+👉 Nápady na použitie:
+• 🍜 Do wok jedál a polievok – pridajte ich na konci varenia.
+• 🍣 V sushi alebo poke bowl – posypte na ryžu s rybou a avokádom.
+• 🥗 V ázijských šalátoch – kombinujte s koriandrom a sezamovými semienkami.
+• 🍤 Ako ozdobu k tempure – doplňte ich k vyprážanej zelenine.
+• 🥢 Do letných rýžových roliek – pridajte pre sviežu textúru.
+
+⚠️ Alergény:
+Mix obsahuje bieľu horčicu, ktorá patrí medzi potravinové alergény podľa nariadenia EÚ č. 1169/2011. Môže vyvolať alergické reakcie u citlivých osôb.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Alergény a výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Zažite ázijské umami v každom súste – pestujte si vlastnú exotiku doma! 🌱🍜</pre>
     </div>
   </div>
 
