--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       </div>
       <div class="microgreen-card" data-modal="salat-modal">
         <img src="salat.jpg" alt="Šalát">
-        <h3>Šalát</h3>
+        <h3>Šalát<br>Lettuce</h3>
         <p>Svieži a chrumkavý, plný vitality.</p>
       </div>
       <div class="microgreen-card" data-modal="???-modal">
@@ -835,7 +835,7 @@ Dodajte svojim jedlám štipku Stredomoria! 🍅✨</pre>
     <div class="modal-content">
       <span class="close-btn">×</span>
       <h3>Benefity Ázijského mixu (Asian Micro Mix)</h3>
-      <pre>Otvorte si bránu umami chutí ázijských jedál s mixom microgreens - pak choi (čínska kapusta), biela horčica, mizuna červená a mladé listy kvaky (turín), ktoré sú ľahké pestovať a plné exotických vnemov! Táto zmes kombinuje jemné, pikantné a sladké noty v dokonalej harmonii. 🌏✨
+      <pre>Otvorte si bránu umami chutí ázijských jedál s mixom microgreens - pak choi (čínska kapusta), biela horčica, mizuna červená a mladé listy kvaky (turín), ktoré sú plné exotických vnemov! Táto zmes kombinuje jemné, pikantné a sladké noty v dokonalej harmonii. 🌏✨
 
 🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
 ✅ Kalórie: 38 kcal
@@ -894,34 +894,60 @@ Zažite ázijské umami v každom súste – pestujte si vlastnú exotiku doma! 
   <div id="salat-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Šalátu </h3>
-      <pre>Šalátové microgreens sú jemné, svieže a plné vitamínov a minerálov, ktoré podporujú trávenie, hydratáciu a zdravie kože. Sú ideálne pre ľudí, ktorí hľadajú ľahko stráviteľnú, ale výživnú zeleninu.
+      <h3>Benefity Šalátu (Lettuce)</h3>
+      <pre>Šalátové microgreens sú jemné a výživné, vhodné ako súčasť vyváženej stravy. 🌱
 
-🔬 Výživové hodnoty na 100 g šalátových microgreens:
-
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
 ✅ Kalórie: 25 kcal
 ✅ Bielkoviny: 2,5 g
 ✅ Sacharidy: 4,2 g
 ✅ Vláknina: 2,8 g
 ✅ Tuky: 0,3 g
 
-🟢 Vitamíny a minerály v šalátových microgreens
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
 
-🌞 Vitamín A (beta-karotén) – podporuje zdravie očí a pokožky. 👀
-🦸‍♂️ Vitamín C – silný antioxidant, ktorý posilňuje imunitu. 🛡️
-💧 Vitamín K – nevyhnutný pre zdravé kosti a správnu zrážanlivosť krvi. 🦴
-💡 Vitamíny skupiny B (B1, B2, B6, B9) – podporujú metabolizmus a energetickú rovnováhu. ⚡
-💖 Draslík, vápnik, horčík, železo – pomáhajú regulovať krvný tlak a posilňujú kardiovaskulárny systém.
+🟢 Vitamíny v šalátových microgreens:
+• 🌞 Vitamín A – prispieva k udržaniu normálneho videnia.
+• 🛡️ Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• ⚡ Vitamín B1, B2, B6, B9 – prispievajú k normálnemu energetickému metabolizmu.
+
+🔵 Minerály v šalátových microgreens:
+• 💪 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+• 🩸 Železo – prispieva k normálnej tvorbe červených krviniek.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Vláknina – prispieva k normálnej činnosti tráviaceho systému.
+• 💧 Vysoký obsah vody – napomáha udržaniu hydratácie organizmu.
 
 💡 Prečo zaradiť šalátové microgreens do stravy?
+✅ Vitamín C a A – prispievajú k ochrane buniek a normálnemu stavu pokožky.
+🌱 Vláknina – podporuje pravidelnú činnosť čriev.
+🦴 Vápnik, horčík a vitamín K – prispievajú k udržaniu zdravých kostí.
+⚡ Nízka energetická hodnota – vhodné pre rôzne stravovacie preferencie.
 
-✅ Podporujú hydratáciu – vysoký obsah vody udržuje telo svieže a hydratované. 💦
-✅ Zlepšujú trávenie – vláknina podporuje zdravie čriev. 🌱
-✅ Podporujú zdravú pleť – vitamín C a beta-karotén prispievajú k mladistvému vzhľadu. ✨
-✅ Nízky obsah kalórií – ideálne pre ľudí, ktorí chcú schudnúť bez straty živín. 🥗
-✅ Podporujú zdravé kosti – vápnik, horčík a vitamín K posilňujú kostnú štruktúru. 🦴
+👉 Tip:
+Šalátové microgreens sú univerzálne! Vyskúšajte ich:
+• 🥗 V čerstvých šalátoch – kombinujte s ovocím (jahody, hrušky) a kozím syrom.
+• 🌯 V wrapoch alebo sendvičoch – pridajte k avokádu a krútenej šunke.
+• 🥤 V zelených šťavách – zmiešajte s jablkom a mrkvou.
+• 🍞 Ako dekoráciu – posypte na pomazánky aleba toast s ricottou.
+• 🥣 Do jogurtových misiek – doplňte ich k granole a lesným ovociu.
 
-👉 Tip: Pridaj šalátové microgreens do čerstvých šalátov, wrapov, sendvičov alebo ich použi ako jemnú zeleninovú oblohu! 🥗🍞</pre>
+⚠️ Alergény:
+Šalátové microgreens neobsahujú žiadne z 14 hlavných alergénov EÚ. V ojedinelých prípadoch môžu u citlivých osôb vyvolať reakcie podobné alergii.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Vychutnajte si sviežosť a výživu v každom súste! 🥬✨</pre>
     </div>
   </div>
 
