--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         <h3>Šalát<br>Lettuce</h3>
         <p>Svieži a chrumkavý, plný vitality.</p>
       </div>
-      <div class="microgreen-card" data-modal="???-modal">
+      <div class="microgreen-card" data-modal="Pestrec mariánsky-modal">
         <img src="otaznik.jpg" alt="Pestrec mariánsky">
         <h3>Pestrec mariánsky<br>Milk Thistle</h3>
         <p>:).</p>
@@ -951,10 +951,10 @@ Vychutnajte si sviežosť a výživu v každom súste! 🥬✨</pre>
     </div>
   </div>
 
-  <div id="chili-modal" class="modal">
+  <div id="Pestrec mariánsky-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Pestreca Mariánskeho (Milk Thistle Microgreens)</h3>
+      <h3>Benefity Pestreca mariánskeho (Milk Thistle)</h3>
       <p>Pestrecové microgreens sú jemné a výživné, vhodné ako súčasť vyváženej stravy. 🌱
 
 🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
