--- a/index.html
+++ b/index.html
@@ -335,10 +335,10 @@
       </div>
 
       <!-- Nové produkty -->
-      <div class="microgreen-card" data-modal="novy1-modal">
-        <img src="novy1.jpg" alt="Nový produkt 1">
-        <h3>Nový produkt 1</h3>
-        <p>Krátky popis produktu 1.</p>
+      <div class="microgreen-card" data-modal="Čínska kapusta-modal">
+        <img src="novy1.jpg" alt="Čínska kapusta">
+        <h3>Čínska kapusta<br>Pak Choi</h3>
+        <p>Jemne korenistá a chrumkavá, s osviežujúcou chuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="novy2-modal">
         <img src="novy2.jpg" alt="Nový produkt 2">
@@ -1011,11 +1011,64 @@ Oživte svoju stravu prírodnou silou pestreca! 🌿✨</p>
   </div>
 
   <!-- Modálne okná pre nové produkty -->
-  <div id="novy1-modal" class="modal">
+  <div id="Čínska kapusta-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Nový produkt 1</h3>
-      <pre>Informácie o Nový produkt 1 budú dostupné čoskoro.</pre>
+      <h3>Benefity Čínskek kapusty (Pak Choi)</h3>
+      <pre>Čínska kapusta (Pak Choi) s jemnou chuťou a chrumkavou štruktúrou je výživovou bombou vhodnou ako súčasť vyváženej stravy. 🌱
+
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
+✅ Kalórie: 30 kcal
+✅ Bielkoviny: 3,0 g
+✅ Sacharidy: 5,5 g
+✅ Vláknina: 3,2 g
+✅ Tuky: 0,4 g
+
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
+
+🟢 Vitamíny v Pak Choi microgreens:
+• 🌞 Vitamín A – prispieva k udržaniu normálneho videnia.
+• 🛡️ Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• ⚡ Vitamín B6 – prispieva k normálnej funkcii imunitného systému.
+
+🔵 Minerály v Pak Choi microgreens:
+• 💪 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+• 🩸 Železo – prispieva k normálnej tvorbe červených krviniek.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Chlorofyl – prispieva k normálnej funkcii buniek.
+• 🧪 Antioxidanty – chránia bunky pred oxidačným stresom.
+• 💧 Vysoký obsah vody – napomáha hydratácii organizmu.
+
+💡 Prečo zaradiť Pak Choi microgreens do stravy?
+✅ Vláknina – prispieva k normálnej činnosti tráviaceho systému.
+❤️ Draslík – podporuje zdravé srdce a krvný obeh.
+🛡️ Vitamín C – posilňuje imunitnú odpoveď.
+🌱 Nízka energetická hodnota – ideálne pre rôzne stravovacie potreby.
+
+👉 Tip:
+Pak Choi microgreens sú dokonalé do ázijských jedál! Vyskúšajte ich:
+• 🍜 V wok misách – pridajte k tofu, fazuľovým klíčkom a sezamovému oleju.
+• 🥗 V čerstvých šalátoch – kombinujte s mangom, avokádom a limetkovou šťavou.
+• 🍲 Do polievok – posypte na miso aleba kokosovú polievku.
+• 🌯 V letných rolkách – zabalte do rýžového papiera s krevetami a mätou.
+• 🥢 Ako ozdobu – doplňte ich k rybe aleba grilovanej zelenine.
+
+⚠️ Alergény:
+Pak Choi nie je zoznamovaný medzi 14 hlavných alergénov EÚ. V ojedinelých prípadoch môže u citlivých osôb vyvolať reakcie podobné alergii na brukvovité rastliny.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Zažite sviežosť ázijských chutí s každým sústrom! 🥢✨</pre>
     </div>
   </div>
   <div id="novy2-modal" class="modal">
