--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
       <div class="microgreen-card" data-modal="Pestrec mariánsky-modal">
         <img src="otaznik.jpg" alt="Pestrec mariánsky">
         <h3>Pestrec mariánsky<br>Milk Thistle</h3>
-        <p>:).</p>
+        <p>Jemne horký a zemito orieškový.</p>
       </div>
       <div class="microgreen-card" data-modal="???-modal">
         <img src="otaznik.jpg" alt="Chystáme novú mikrozeleninku">
